[gd_scene load_steps=17 format=3 uid="uid://c6a0lqgjlgynr"]

[ext_resource type="Script" uid="uid://c5why8fl1mw8g" path="res://shed/shed.gd" id="1_em5n0"]
[ext_resource type="Texture2D" uid="uid://besk21tgfr3b0" path="res://greatest assets/Untitled2.png" id="2_mfbjf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_35efx"]
atlas = ExtResource("2_mfbjf")
region = Rect2(213, 0, 255, 171)

[sub_resource type="AtlasTexture" id="AtlasTexture_vhads"]
atlas = ExtResource("2_mfbjf")
region = Rect2(213, 342, 255, 171)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ipni"]
atlas = ExtResource("2_mfbjf")
region = Rect2(213, 513, 255, 171)

[sub_resource type="AtlasTexture" id="AtlasTexture_iq6gh"]
atlas = ExtResource("2_mfbjf")
region = Rect2(213, 171, 255, 171)

[sub_resource type="SpriteFrames" id="SpriteFrames_2m1mw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_35efx")
}],
"loop": true,
"name": &"cooked",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vhads")
}],
"loop": true,
"name": &"cooking",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ipni")
}],
"loop": true,
"name": &"empty",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iq6gh")
}],
"loop": true,
"name": &"uncooked",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_em5n0"]
size = Vector2(183, 118)

[sub_resource type="AtlasTexture" id="AtlasTexture_ohrg2"]
atlas = ExtResource("2_mfbjf")
region = Rect2(555, 0, 199, 175)

[sub_resource type="AtlasTexture" id="AtlasTexture_em5n0"]
atlas = ExtResource("2_mfbjf")
region = Rect2(555, 171, 199, 132)

[sub_resource type="SpriteFrames" id="SpriteFrames_mfbjf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ohrg2")
}],
"loop": true,
"name": &"cold",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_em5n0")
}],
"loop": true,
"name": &"hot",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6ifk6"]
size = Vector2(180.25, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_mfbjf"]
atlas = ExtResource("2_mfbjf")
region = Rect2(0, 175, 193, 175)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ifk6"]
atlas = ExtResource("2_mfbjf")
region = Rect2(0, 0, 193, 175)

[sub_resource type="SpriteFrames" id="SpriteFrames_35efx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mfbjf")
}],
"loop": true,
"name": &"empty",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ifk6")
}],
"loop": true,
"name": &"full",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ohrg2"]
size = Vector2(85, 130)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_em5n0")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Label" type="Label" parent="."]
offset_left = -558.0
offset_top = -310.0
offset_right = -203.0
offset_bottom = -135.0

[node name="Timer" type="Timer" parent="."]
wait_time = 8.128

[node name="Pot" type="Area2D" parent="."]
top_level = true
position = Vector2(-7, 22)
collision_priority = 2.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Pot"]
position = Vector2(4, -15)
sprite_frames = SubResource("SpriteFrames_2m1mw")
animation = &"empty"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pot"]
position = Vector2(0, -11)
shape = SubResource("RectangleShape2D_em5n0")

[node name="Stove" type="Area2D" parent="."]
position = Vector2(11, 27)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Stove"]
position = Vector2(-20, 73)
sprite_frames = SubResource("SpriteFrames_mfbjf")
animation = &"cold"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Stove"]
position = Vector2(-18.125, 75)
shape = SubResource("RectangleShape2D_6ifk6")

[node name="Bottle" type="Area2D" parent="."]
position = Vector2(279, 25)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Bottle"]
position = Vector2(107, -15)
sprite_frames = SubResource("SpriteFrames_35efx")
animation = &"full"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bottle"]
position = Vector2(108, -8)
shape = SubResource("RectangleShape2D_ohrg2")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="input_event" from="Pot" to="." method="_on_area_2d_input_event"]
[connection signal="input_event" from="Pot" to="Pot/AnimatedSprite2D" method="_on_area_2d_input_event"]
[connection signal="input_event" from="Stove" to="." method="_on_stove_input_event"]
[connection signal="input_event" from="Bottle" to="." method="_on_bottle_input_event"]
